authorization/mysql-nw-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mysql-policy
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
          matchLabels:
            name: my_api
        ports:
        - protocol: TCP
          port: 3306
